--- a/app/src/main/res/layout/activity_assistant.xml
+++ b/app/src/main/res/layout/activity_assistant.xml
@@ -1,97 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Assistant">
+    tools:context=".Assistant"
+    android:background="@color/background">
 
-    <TableLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/appBar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/black"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@color/grey"
+        android:paddingHorizontal="10dp"
+        android:paddingVertical="20dp">
 
-        <TableRow
+        <ImageButton
+            android:id="@+id/backButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="4dp"
+            android:background="#00000000"
+            android:contentDescription="@string/back_button"
+            android:src="@drawable/back"
+            android:text="@string/back"
+            android:textColor="@color/red"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/youText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/assistant"
+            android:textColor="@color/white"
+            android:textSize="30sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.9"
+        app:layout_constraintTop_toBottomOf="@id/appBar">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/Chats"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:layout_weight="0.05"
-            android:background="@color/grey">
+            android:layout_height="wrap_content"
+            android:padding="10dp" />
+    </TableRow>
 
-            <ImageView
-                android:id="@+id/back"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.15"
-                android:clickable="true"
-                android:focusable="true"
-                android:src="@drawable/back"
-                android:textColor="@color/white" />
-
-            <TextView
-                android:id="@+id/assistantText"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.7"
-                android:text="@string/assistant"
-                android:textAlignment="center"
-                android:textColor="@color/white"
-
-                android:textSize="20sp" />
-
-            <ImageView
-                android:id="@+id/header"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.15"
-                android:clickable="true"
-                android:focusable="true"
-                android:src="@drawable/chatbot_icon"
-                android:textColor="@color/white" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="573dp"
-            android:layout_weight="0.9" >
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/Chats"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="10dp" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:gravity="center"
-            android:layout_weight="0.05"
-            android:paddingHorizontal="10dp">
-            <EditText
-                android:id="@+id/send_box"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="10dp"
-                android:layout_weight="0.8"
-                android:hint="@string/message"
-                android:textColor="@color/white"
-                android:padding="15dp"
-                android:textColorHint="@color/white"
-                android:background="@drawable/custom_edit_text_rounded" />
-            <ImageView
-                android:id="@+id/send_icon"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.2"
-                android:layout_marginTop="20dp"
-                android:clickable="true"
-                android:focusable="true"
-                android:src="@drawable/ic_send"
-                android:textColor="@color/white" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="10dp"
+        android:gravity="center"
+        android:layout_marginHorizontal="10dp">
+        <EditText
+            android:id="@+id/send_box"
+            android:layout_height="wrap_content"
+            android:layout_width="300dp"
+            android:autofillHints=""
+            android:hint="@string/message"
+            android:inputType="textAutoComplete"
+            android:textColor="@color/white"
+            android:padding="15dp"
+            android:textColorHint="@color/white"
+            android:background="@drawable/custom_edit_text_rounded"
+            android:layout_marginEnd="10dp"/>
+        <ImageView
+            android:id="@+id/send_icon"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:clickable="true"
+            android:contentDescription="@string/send_button"
+            android:focusable="true"
+            android:src="@drawable/ic_send"
+            android:textColor="@color/white" />
+    </LinearLayout>
 
 
-        </TableRow>
-    </TableLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+
+<!--<TableRow-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="0dp"-->
+<!--    android:layout_weight="0.05"-->
+<!--    android:paddingHorizontal="10dp"-->
+<!--    android:gravity="center">-->
+
+
+
+<!--</TableRow>-->
+<!--</TableLayout>-->
