--- a/app/src/main/res/layout/activity_meal_tracking.xml
+++ b/app/src/main/res/layout/activity_meal_tracking.xml
@@ -53,7 +53,6 @@
         android:layout_below="@id/progressBar"
         android:layout_marginBottom="16dp" />
 
-    <!-- Search Bar -->
     <EditText
         android:autofillHints=""
         android:inputType="none"
@@ -72,18 +71,24 @@
         tools:layout_editor_absoluteX="3dp"
         android:paddingHorizontal="10dp"
         android:layout_marginHorizontal="10dp"
-        android:drawableEnd="@drawable/ic_scan"/>
-
+        android:drawableEnd="@drawable/ic_scan" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:visibility="invisible"
-        app:layout_constraintTop_toBottomOf="@id/searchBar"
-        app:layout_constraintBottom_toTopOf="@id/addButton"
         android:layout_height="0dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/searchBar"
+        app:layout_constraintBottom_toTopOf="@id/foodLogRecyclerView"
+        android:layout_marginBottom="16dp" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/foodLogRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/recyclerView"
+        app:layout_constraintBottom_toTopOf="@id/addButton" />
 
     <Button
         android:id="@+id/addButton"
@@ -108,6 +113,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"/>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
