--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,22 +14,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="38dp"
         android:gravity="center_vertical"
-        android:paddingHorizontal="20dp"
+        android:paddingHorizontal="15dp"
         app:layout_constraintTop_toTopOf="parent">
-
-        <ImageView
-            android:id="@+id/profile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:contentDescription="@string/profile"
-            android:focusable="true"
-            android:src="@drawable/profile" />
-
-        <Space
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
 
         <TextView
             android:id="@+id/homeText"
@@ -40,42 +26,22 @@
             android:textColor="@color/white"
             android:textSize="40sp"
             android:textStyle="bold" />
-
         <Space
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1" />
+            android:layout_weight="1"/>
 
         <ImageView
-            android:id="@+id/notifications"
+            android:id="@+id/profile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:clickable="true"
-            android:contentDescription="@string/notification"
+            android:contentDescription="@string/profile"
             android:focusable="true"
-            android:src="@drawable/notification"
-            android:textColor="@color/white" />
-    </TableRow>
+            android:src="@drawable/profile" />
 
-    <EditText
-        android:id="@+id/searchBar"
-        android:layout_width="0dp"
-        android:layout_height="35dp"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginTop="15dp"
-        android:autofillHints=""
-        android:background="@drawable/custom_edit_text_rounded"
-        android:drawableEnd="@drawable/ic_search"
-        android:hint="@string/search_for_near_by_gyms"
-        android:inputType="none"
-        android:paddingHorizontal="10dp"
-        android:textColor="#bdbdbd"
-        android:textColorHint="#bdbdbd"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tableRow"
-        tools:layout_editor_absoluteX="3dp"/>
+
+    </TableRow>
 
     <TableLayout
         android:id="@+id/caloriesContainer"
@@ -84,8 +50,10 @@
         android:layout_marginHorizontal="10dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/custom_edit_text_rounded"
+        android:focusable="true"
         android:padding="20dp"
-        app:layout_constraintTop_toBottomOf="@id/searchBar">
+        app:layout_constraintTop_toBottomOf="@id/tableRow"
+        android:clickable="true">
 
         <TableRow>
 
@@ -114,7 +82,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:drawablePadding="5dp"
-                    android:text="@string/_16"
                     android:textColor="@color/white"
                     android:textSize="18sp"
                     app:drawableStartCompat="@drawable/ic_flame" />
@@ -129,7 +96,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:drawablePadding="5dp"
-                    android:text="@string/_0_6_4l"
                     android:textColor="@color/white"
                     android:textSize="18sp"
                     app:drawableStartCompat="@drawable/ic_water" />
@@ -145,8 +111,6 @@
                     android:layout_width="200dp"
                     android:layout_height="200dp"
                     android:indeterminate="false"
-                    android:max="100"
-                    android:progress="70"
                     android:progressDrawable="@drawable/circular_progress_bar"
                     android:textAlignment="center"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -158,7 +122,6 @@
                     android:id="@+id/text_remaining"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/remaining_calories"
                     android:textAlignment="center"
                     android:textColor="@color/white"
                     android:textSize="20sp"
@@ -174,26 +137,14 @@
         </TableRow>
     </TableLayout>
 
-    <TextView
-        android:id="@+id/discover"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
-        android:text="@string/discover"
-        android:textColor="@color/white"
-        android:textSize="32sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/caloriesContainer" />
-
-    <TableRow
-        android:id="@+id/buttons"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="10dp"
-        android:gravity="center_vertical"
-        app:layout_constraintTop_toBottomOf="@+id/discover">
+        app:layout_constraintTop_toBottomOf="@id/caloriesContainer"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="20dp"
+        android:layout_marginHorizontal="20dp">
+
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -202,88 +153,28 @@
             android:orientation="vertical">
 
             <ImageButton
-                android:id="@+id/chatBotButton"
+                android:id="@+id/locationButton"
                 android:layout_width="85dp"
                 android:layout_height="85dp"
                 android:layout_marginBottom="5dp"
-                android:background="@drawable/bg_button"
-                android:backgroundTint="@color/white"
+                android:background="@drawable/custom_edit_text_rounded"
+                android:backgroundTint="@color/grey"
                 android:clickable="true"
                 android:contentDescription="@string/chat_bot"
                 android:focusable="true"
-                app:srcCompat="@drawable/chatbot_icon" />
+                app:srcCompat="@drawable/location" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="@string/chatbot"
+                android:text="@string/nearby_gyms"
                 android:textColor="@color/white" />
         </LinearLayout>
 
-        <Space
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
+    </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical">
 
-            <ImageButton
-                android:id="@+id/waterIntake"
-                android:layout_width="85dp"
-                android:layout_height="85dp"
-                android:layout_marginBottom="5dp"
-                android:background="@drawable/bg_button"
-                android:backgroundTint="@color/white"
-                android:clickable="true"
-                android:contentDescription="@string/water_intake"
-                android:focusable="true"
-                app:srcCompat="@drawable/ic_intake" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/water_intake"
-                android:textColor="@color/white" />
-        </LinearLayout>
-
-        <Space
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <ImageButton
-                android:id="@+id/premium_button"
-                android:layout_width="85dp"
-                android:layout_height="85dp"
-                android:layout_marginBottom="5dp"
-                android:background="@drawable/bg_button"
-                android:backgroundTint="@color/white"
-                android:clickable="true"
-                android:contentDescription="@string/upgrade_to_premium"
-                android:focusable="true"
-                app:srcCompat="@drawable/ic_crown" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/upgrade_to_npremium"
-                android:textColor="@color/white" />
-        </LinearLayout>
-
-    </TableRow>
 
     <include
         android:id="@+id/nav_bar"
