--- a/app/src/main/res/layout/activity_meal_tracking.xml
+++ b/app/src/main/res/layout/activity_meal_tracking.xml
@@ -53,6 +53,20 @@
         android:layout_below="@id/progressBar"
         android:layout_marginBottom="16dp" />
 
+    <TextView
+        android:id="@+id/waterRemaining"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/caloriesRemaining"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="10dp"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:text="450 mL Water remaining"
+        android:layout_below="@id/progressBar"
+        android:layout_marginBottom="16dp" />
+
     <EditText
         android:autofillHints=""
         android:inputType="none"
@@ -64,14 +78,13 @@
         android:textColor="#bdbdbd"
         android:textColorHint="#bdbdbd"
         android:visibility="visible"
-        app:layout_constraintTop_toBottomOf="@id/caloriesRemaining"
+        app:layout_constraintTop_toBottomOf="@id/waterRemaining"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="15dp"
         tools:layout_editor_absoluteX="3dp"
         android:paddingHorizontal="10dp"
-        android:layout_marginHorizontal="10dp"
-        android:drawableEnd="@drawable/ic_scan" />
+        android:layout_marginHorizontal="10dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
@@ -88,24 +101,36 @@
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/recyclerView"
-        app:layout_constraintBottom_toTopOf="@id/addButton" />
+        app:layout_constraintBottom_toTopOf="@id/addWaterButton" />
+
+    <EditText
+        android:id="@+id/waterIntake"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:layout_marginEnd="8dp"
+        android:hint="Enter water intake (mL)"
+        android:inputType="number"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        app:layout_constraintEnd_toStartOf="@id/addWaterButton"
+        app:layout_constraintTop_toBottomOf="@+id/foodLogRecyclerView" />
 
     <Button
-        android:id="@+id/addButton"
+        android:id="@+id/addWaterButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="200dp"
         android:layout_marginEnd="10dp"
+        android:layout_marginBottom="30dp"
         android:backgroundTint="@color/grey"
         android:paddingVertical="10dp"
-        android:text="Log Meal Entry"
+        android:text="Add Water Intake (mL)"
         android:textColor="#FFFFFF"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="15sp"
         app:layout_constraintBottom_toTopOf="@id/navigation_bar"
-        android:layout_marginBottom="30dp"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <include
         android:id="@+id/navigation_bar"
